# UAV-object-avoidance

./: README.md  frames_2024-05-09_16.55.42.gv
install/: setup.sh
install/bounding_script_pkg/share/bounding_script_pkg/: package.ps1  package.sh  package.xml
labels/: image_1715693533.txt  image_1715695701.txt  image_1715695704.txt  image_1715695707.txt  image_1715695710.txt  image_1715695713.txt  image_1715695716.txt  image_1715695719.txt  image_1715695722.txt  image_1715695725.txt  image_1715695728.txt  image_1715695731.txt  image_1715695734.txt  image_1715695737.txt  image_1715695740.txt  image_1715695743.txt  image_1715695746.txt  image_1715695749.txt  image_1715695752.txt  image_1715695755.txt  image_1715695758.txt  image_1715695761.txt  image_1715695764.txt  image_1715695767.txt  image_1715695770.txt  image_1715695773.txt  image_1715695776.txt  image_1715695779.txt  image_1715695782.txt  image_1715695785.txt  image_1715695788.txt  image_1715695791.txt  image_1715695794.txt  image_1715695797.txt  image_1715695800.txt  image_1715695803.txt  image_1715695806.txt  image_1715695809.txt  image_1715695812.txt  image_1715695815.txt  (+217 more)
log/: latest_build
src/: sjtu_drone
src/bounding_script_pkg/: setup.cfg  setup.py
src/bounding_script_pkg/install/: setup.sh  (+1 more)
src/install/: setup.ps1  setup.sh
src/log/: latest_build
src/point_cloud_transformer/: CMakeLists.txt  setup.cfg  setup.py
src/point_cloud_transformer/point_cloud_transformer/: point_cloud_transform_node.py
src/point_cloud_transformer/src/: point_cloud_transformer_node.cpp
src/yolov5_ros/: setup.py
(+45 files in other folders)
