<?xml version="1.0"?>
<package format="3">
  <name>bounding_script_pkg</name>
  <version>0.0.0</version>
  <description>A ROS2 package for bounding box image processing in Gazebo simulations</description>
  <maintainer email="andrei.n53@yahoo.com">andrei</maintainer>
  <license>MIT</license>

  <!-- Dependencies -->
  <build_depend>rclpy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

